--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     }
   </style>
   <script src="../library/p5.js"></script>
-  <!--<script src="../addons/p5.sound.min.js"></script>-->
-  <!-- <script src="pendulum.js"></script> -->
+  <!-- <script src="../library/addons/p5.sound.min.js"></script> -->
   <script src="Collision_Pi.js"></script>
 </head>
 
